--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,13 @@ quarkus.cognito-user-pools.aws.credentials.type=static
 quarkus.cognito-user-pools.aws.credentials.static-provider.access-key-id=test-key
 quarkus.cognito-user-pools.aws.credentials.static-provider.secret-access-key=test-secret
 
-#docker run -it --publish 8008:4566 -e SERVICES=s3 -e START_WEB=0 localstack/localstack:0.11.5
+#docker run --rm --publish 8008:4566 -e SERVICES=s3 -e START_WEB=0 -d localstack/localstack:0.11.5
 quarkus.s3.endpoint-override=http://localhost:8008
 
+quarkus.s3.sync-client.type=apache
 quarkus.s3.aws.region=us-east-1
-quarkus.s3.aws.credentials.type=static
+#quarkus.s3.aws.credentials.type=static
+quarkus.s3.aws.credentials.type=default
 quarkus.s3.aws.credentials.static-provider.access-key-id=test-key
 quarkus.s3.aws.credentials.static-provider.secret-access-key=test-secret
 
